changes to media screen for device responsiveness and fixes to actual biography according to current status of affairs

--- a/banner.css
+++ b/banner.css
@@ -5,7 +5,7 @@
 	top: 0px;
 
 	background: linear-gradient(to bottom, rgba(255,255,255,0) 20%,
-	rgba(255,255,255,1)),  url('./b-dimitrov-sf.jpg') no-repeat center center fixed;
+	rgba(255,255,255,1)),  url('./coba.jpg') no-repeat center center fixed;
 
 	-webkit-background-size: cover;
 
