--- a/language.css
+++ b/language.css
@@ -2,7 +2,7 @@
     display: flex;
     overflow: hidden;
     width: 200px;
-    border: 1px solid #ccc;
+    border: 1px solid #fff;
     border-radius: 5px;
     cursor: pointer;
     font-size: 8px;
@@ -17,7 +17,7 @@
   
   .langItem.active {
     background-color: #ccc;
-    color: white;
+    color: dimgray;
   }
   
   .text.hidden {
@@ -31,4 +31,38 @@
   .languages {
     padding-bottom: 25px;
   }
+
+  #avatar {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    object-position: bottom;
+    margin-bottom: 25px;
+  }
   
+  .copy-icon {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 5px;
+    position: relative;
+    cursor: pointer;
+  }
+  
+  .copy-icon:hover:after {
+    content: 'Copy';
+    position: absolute;
+    top: -20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #b8977c;
+    color: #fff;
+    font-size: 10px;
+    padding: 2px 6px;
+    border-radius: 3px;
+    white-space: nowrap;
+  }
+  
+  .copy-icon.clicked:after {
+    content: 'Copied!';
+    background: lightgreen;
+  }
