--- a/styles.css
+++ b/styles.css
@@ -404,18 +404,25 @@ button.print-button:hover .print-icon::after {
   .container {
 	border-radius: 10px;
 	max-width: auto;
-	padding: 2px;
+	padding-left: 2px;
+	padding-right: 0 !important;
+	padding-top: 2px;
+	padding-bottom: 2px;
 	position: relative;
-	z-index:1;
+	z-index: 1;
 	background-color: #4158D0;
 	background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #ddb595 100%); 
-	margin-right:25px;
 	filter: brightness(120%);
+	top: -2px;
+	background-size: 400%;
+	width: calc(100% + 5px);
+	height: calc(100% + 5px);
+	animation: glower 15s linear infinite;
 }
 
 .container:before {
-	  border-radius: 10px;
-	z-index:-1;
+	border-radius: 10px;
+	z-index: -1;
 	position: absolute;
 	content:"";
 	width:100%;
@@ -424,7 +431,20 @@ button.print-button:hover .print-icon::after {
 	top:0;
 	background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #ddb595 100%); 
 	filter: blur(20px);
+  }
+
+  @keyframes glower {
+	0% {
+	  background-position: 0 0;
+	}
 	
+	50% {
+	  background-position: 400% 0;
+	}
+	
+	100% {
+	  background-position: 0 0;
+	}
   }
   
   .gradient {
