--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,6 @@ body {
 
 
 .right {
-	width: calc(100% - 250px);
 	border-radius: 10px;
 }
 
@@ -423,6 +422,17 @@ button.print-button:hover .print-icon::after {
 	transform: translateX(-100%);
 	box-shadow: 0 0 5px rgba(65, 88, 208, 0.3), 0 0 5px rgba(200, 80, 192, 0.3), 0 0 5px rgba(221, 181, 149, 0.3);
   }
+
+  .container::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: -1;
+	box-shadow: 0 0 10px var(--shadow-color);
+  }
   
   @keyframes flowing-edges {
 	0% {
@@ -431,19 +441,6 @@ button.print-button:hover .print-icon::after {
 	100% {
 	  transform: translateX(100%);
 	}
-  }
-
-  .boxshadow {
-	border-radius: 10px;
-	z-index: -1;
-	position: absolute;
-	content: "";
-	width: 100%;
-	height: 100%;
-	left: 10px;
-	top: 0;
-	background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #ddb595 100%);
-	filter: blur(20px);
   }
 
 .gradient {
