add qr feature on print

--- a/styles.css
+++ b/styles.css
@@ -591,6 +591,8 @@ button.print-button:hover .print-icon::after {
 	opacity: 1;
 }
 
+
+
 .questionmark {
 	display: flex;
 	justify-content: center;
@@ -599,3 +601,24 @@ button.print-button:hover .print-icon::after {
 	margin: 0;
 	padding: 0;
 }
+
+/* Default style for the qr-div */
+.qr-div {
+    display: none; /* Initially hide the div */
+}
+
+/* Media query for print styles */
+@media print {
+    .qr-div {
+        display: block; /* Display the div when printing */
+    }
+
+	#qr {
+		width: 250px;
+	}
+
+	.tooltip:hover .tooltiptext {
+		visibility: hidden;
+	}
+}
+
